package interfaces;

public interface Livro {
    void exibirDetalhes();
}